--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ div#places_div{
 .tabulator .tabulator-header {
 	position: relative;
 	box-sizing: border-box;
-	width: 100%;
+	/*width: 100%; */
 	/* border-bottom: 1px solid #999; */
 	background-color: var(--ofm-bg);
 	color: var(--ofm-font-color);
@@ -241,9 +241,9 @@ div#places_div{
 }
 
 .table {
-    height: 80vh;
-    /*max-height: 40vh; */
-    border: 0;
+    /* height: 80vh; */
+    max-height: 80vh;
+    /* border: 0; */
     padding: 0;
     background-color: var(--ofm-bg)!important;
 }
@@ -266,7 +266,7 @@ div#places_div{
 
 
 .row {
-	min-width:100vw;
+	max-width:100vw;
 }
 
 .table > :not(caption) > * > * {
@@ -304,7 +304,7 @@ div#places_div{
 .tabulator .tabulator-header {
 	position: relative;
 	box-sizing: border-box;
-	width: 100%;
+	/*width: 100%; */
 	border-bottom: 0!important;
 	background-color: var(--ofm-bg-dark)!important;
 	color:var(--ofm-bg)!important;
