--- a/html/css/style.css
+++ b/html/css/style.css
@@ -69,6 +69,7 @@
     text-align: left ;
 }
 
+
 .rubrik-zeichen {
     color: black;
 }
@@ -635,8 +636,10 @@ h2 {
      .logo{
         padding-top: 0;
         padding-bottom: 0;
+        max-width: 60%;
      }
      
+     .spacing {margin-top: 1rem ;}
     .row {
             margin: 0;
     }
